# cuda

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
benchmarks/: benchmark_template.cu  matmul_bench.cu  reduce.cu  softmax.cu  vector_add_bench.cu
include/: cuda_benchmark.cuh  cuda_utils.cuh
leetgpu/: my2DConv.cu  my3DConv.cu  mycceloss.cu  mydotproduct.cu  mygaussianblur.cu  mygemm.cu  myllamatransformerblock.cu  myprefixsum.cu  myreduce.cu  mysoftmax.cu  mysoftmaxattention.cu
reference/: 2DConv.cu  3DConv.cu  batchedgemm.cu  cceloss.cu  dotproduct.cu  gaussianblur.cu  gemm.cu  histogram.cu  llamatransformerblock.cu  mha.cu  optimizedgemm.cu  prefixsum.cu  softmax.cu  softmaxattention.cu  sotmaxattention4me.cu  sparsematrixvectormultiplication.cu  topk.cu
scripts/: generate_ptx.sh  generate_sass.sh  inspect_kernel.sh  profile_ncu.sh  run_benchmark.sh
src/: vector_add.cu
